--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -5,6 +5,7 @@
     --white-color: #ffffff;
     --grey-color: #e6e6ed;
     --dark-color: #2f3542;
+    --light-color: #d1d8e0;
 }
 
 * {
@@ -56,4 +57,241 @@ body {
     line-height: 1.8;
     color: var(--dark-color);
     background-color: #f1f2f6;
+}
+
+input::placeholder {
+    font-family: 'Poppins';
+    color: var(--grey-color);
+}
+
+.container {
+    max-width: 1100px;
+    width: 100%;
+    padding: 0 30px;
+    margin: 0 auto;
+}
+
+.site {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    padding: 100px 0;
+}
+
+.theform {
+    position: relative;
+    background-color: var(--white-color);
+    padding: 50px 30px;
+    border-radius: 30px;
+    display: flex;
+    box-shadow: rgb(149 157 165 / 20%) 0 8px 24px;
+}
+
+nav ul {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+nav ul li:first-child a {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--light-color);
+    transition: background-color .3s, color .3s;
+}
+
+nav ul li:first-child a:hover {
+    background-color: var(--primary);
+    color: var(--white-color);
+    border: 0;
+}
+
+nav ul li:last-child {
+    font-size: 12px;
+}
+
+
+nav ul li:last-child a {
+    color: var(--primary);
+    font-weight: 500;
+}
+
+nav ul li:last-child a:hover {
+    text-decoration: underline;
+}
+
+.heading h2 {
+    font-size: 42px;
+    margin-top: 50px;
+}
+
+.heading p,
+form .actions p {
+    color: var(--grey-color);
+    font-size: 14px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-top: 30px;
+}
+
+form>p {
+    position: relative;
+    height: 46px;
+}
+
+form p input {
+    font-family: inherit;
+    width: 100%;
+    height: 100%;
+    outline: 0;
+    padding: 0 30px;
+    line-height: 40px;
+    border-width: 0 0 2px;
+    border-style: solid;
+    border-color: var(--light-color);
+}
+
+form p:not(.socials) i {
+    position: absolute;
+    left: 0;
+    top: 23px;
+    line-height: 1;
+    margin-top: -10px;
+    color: var(--grey-color);
+}
+
+form p i.ri-eye-off-line {
+    left: auto;
+    right: 0;
+    color: var(--dark-color);
+    cursor: pointer;
+}
+
+form .actions {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
+
+}
+
+form .actions label {
+    width: 100px;
+    position: relative;
+    overflow: hidden;
+}
+
+form .actions label input {
+    width: 100%;
+    background-color: var(--primary);
+    color: var(--white-color);
+    font-weight: 600;
+    border: 0;
+    border-radius: 25px;
+    line-height: 46px;
+    cursor: pointer;
+}
+
+form .actions label i {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    width: 36px;
+    height: 36px;
+    padding: 10px;
+    line-height: 1;
+    border-radius: 50%;
+    background-color: rgb(255 255 255 /25%);
+    color: var(--white-color);
+    cursor: pointer;
+    transform: translateX(50px);
+    visibility: hidden;
+    transition: transform .3s, visibility .3s;
+}
+
+form .actions label:hover i {
+    transform: translateX(0);
+    visibility: inherit;
+
+}
+
+form .actions button {
+    position: relative;
+    width: 32px;
+    height: 32px;
+    margin: 5px;
+    background-color: transparent;
+    border: 1px solid var(--light-color);
+    border-radius: 50%;
+    font-size: 16px;
+    font-weight: 600;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: background-color .3s, color .3s;
+}
+
+form .socials button:first-child {
+    color: #4267b2;
+}
+
+form .socials button:last-child {
+    color: #db4437;
+}
+
+form .socials button:first-child:hover {
+    background-color: #4267b2;
+}
+
+form .socials button:last-child:hover {
+    background-color: #db4437;
+}
+
+form .socials button:hover {
+    color: var(--white-color);
+    border: 0;
+}
+
+
+@media screen and (min-width: 768px) {
+    .the form {
+        padding: 50px 0;
+    }
+
+    .theform>div {
+        flex: 1 0 50%;
+    }
+
+    .signup {
+        padding: 0 5% 0 13%;
+    }
+
+    .signin {
+        padding: 0 13% 0 5%;
+    }
+
+    .theform .play {
+        position: absolute;
+    }
+}
+
+
+@media screen and (min-width: 992px) {
+    form .actions {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    form .actions label {
+        max-width: 180px;
+    }
 }
