--- a/views/login/login.hbs
+++ b/views/login/login.hbs
@@ -48,6 +48,7 @@
                         <p class="socials">
                             <button>
                                 <i class="ri-facebook-line"></i>
+                                <i class="ri-google-line"></i>
                             </button>
                         </p>
                         <p></p>
@@ -83,6 +84,7 @@
                         <p class="socials">
                             <button>
                                 <i class="ri-facebook-line"></i>
+                                <i class="ri-google-line"></i>
                             </button>
                         </p>
                         <p></p>
