--- a/views/login/login.hbs
+++ b/views/login/login.hbs
@@ -1,97 +1,111 @@
-<div id="page" class="site">
-    <div class="container">
-        <div class="theform">
-            <div class="play">
-                <div class="wrapper">
-                    <div class="card one"></div>
-                    <div class="card two"></div>
-                    <div class="card three"></div>
-                    <div class="card four"></div>
-                    <div class="card five"></div>
-                </div>
-            </div>
-            <div class="signup">
-                <nav>
-                    <ul>
-                        <li><a href="#0"><i class="ri-arrow-left-line"></i></a></li>
-                        <li>Already member?<a href="#0">Sign in</a></li>
-                    </ul>
-                </nav>
-                <div class="heading">
-                    <h2>Sign Up</h2>
-                    <p>We secure your data privacy encrypted.</p>
-                </div>
-                <form action="">
-                    <p>
-                        <i class="ri-user-3-line"></i>
-                        <input type="text" placeholder="Full name">
-                    </p>
-                    <p>
-                        <i class="ri-mail-line"></i>
-                        <input type="email" placeholder="Your email address">
-                    </p>
-                    <p>
-                        <i class="ri-lock-line"></i>
-                        <i class="ri-eye-off-line"></i>
-                        <input type="password" placeholder="Enter password">
-                    </p>
-                    <p>
-                        <i class="ri-lock-line"></i>
-                        <input type="password" placeholder="Re-Enter password">
-                    </p>
-                    <div class="actions">
-                        <label>
-                            <input type="submit" value="Sign Up">
-                            <i class="ri-arrow-right-line"></i>
-                        </label>
-                        <p>Or</p>
-                        <p class="socials">
-                            <button>
-                                <i class="ri-facebook-line"></i>
-                                <i class="ri-google-line"></i>
-                            </button>
-                        </p>
-                        <p></p>
-                    </div>
-                </form>
-            </div>
-            <div class="signin">
-                <nav>
-                    <ul>
-                        <li><a href="#0"><i class="ri-arrow-left-line"></i></a></li>
-                        <li>Don't have an account?<a href="#0">Sign up</a></li>
-                    </ul>
-                </nav>
-                <div class="heading">
-                    <h2>Sign In</h2>
-                    <p>We secure your data privacy encrypted.</p>
-                </div>
-                <form action="">
-                    <p>
-                        <i class="ri-mail-line"></i>
-                        <input type="email" placeholder="Your email address">
-                    </p>
-                    <p>
-                        <i class="ri-lock-line"></i>
-                        <input type="password" placeholder="Enter password">
-                    </p>
-                    <div class="actions">
-                        <label>
-                            <input type="submit" value="Sign In">
-                            <i class="ri-arrow-right-line"></i>
-                        </label>
-                        <p>Or</p>
-                        <p class="socials">
-                            <button>
-                                <i class="ri-facebook-line"></i>
-                                <i class="ri-google-line"></i>
-                            </button>
-                        </p>
-                        <p></p>
-                    </div>
-                </form>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login and Register</title>
+    <link rel="stylesheet" href="./stylesheets/login.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;display=swap">
+</head>
+
+<body>
+    <div id="page" class="site">
+        <div class="container">
+            <div class="theform">
+                <div class="play">
+                    <div class="wrapper">
+                        <div class="card one"></div>
+                        <div class="card two"></div>
+                        <div class="card three"></div>
+                        <div class="card four"></div>
+                        <div class="card five"></div>
+                    </div>
+                </div>
+                <div class="signup">
+                    <nav>
+                        <ul>
+                            <li><a href="#0"><i class="ri-arrow-left-line"></i></a></li>
+                            <li>Already member?<a href="#0">Sign in</a></li>
+                        </ul>
+                    </nav>
+                    <div class="heading">
+                        <h2>Sign Up</h2>
+                        <p>We secure your data privacy encrypted.</p>
+                    </div>
+                    <form action="">
+                        <p>
+                            <i class="ri-user-3-line"></i>
+                            <input type="text" placeholder="Full name">
+                        </p>
+                        <p>
+                            <i class="ri-mail-line"></i>
+                            <input type="email" placeholder="Your email address">
+                        </p>
+                        <p>
+                            <i class="ri-lock-line"></i>
+                            <i class="ri-eye-off-line"></i>
+                            <input type="password" placeholder="Enter password">
+                        </p>
+                        <p>
+                            <i class="ri-lock-line"></i>
+                            <input type="password" placeholder="Re-Enter password">
+                        </p>
+                        <div class="actions">
+                            <label>
+                                <input type="submit" value="Sign Up">
+                                <i class="ri-arrow-right-line"></i>
+                            </label>
+                            <p>Or</p>
+                            <p class="socials">
+                                <button>
+                                    <i class="ri-facebook-line"></i>
+                                    <i class="ri-google-line"></i>
+                                </button>
+                            </p>
+                            <p></p>
+                        </div>
+                    </form>
+                </div>
+                <div class="signin">
+                    <nav>
+                        <ul>
+                            <li><a href="#0"><i class="ri-arrow-left-line"></i></a></li>
+                            <li>Don't have an account?<a href="#0">Sign up</a></li>
+                        </ul>
+                    </nav>
+                    <div class="heading">
+                        <h2>Sign In</h2>
+                        <p>We secure your data privacy encrypted.</p>
+                    </div>
+                    <form action="">
+                        <p>
+                            <i class="ri-mail-line"></i>
+                            <input type="email" placeholder="Your email address">
+                        </p>
+                        <p>
+                            <i class="ri-lock-line"></i>
+                            <input type="password" placeholder="Enter password">
+                        </p>
+                        <div class="actions">
+                            <label>
+                                <input type="submit" value="Sign In">
+                                <i class="ri-arrow-right-line"></i>
+                            </label>
+                            <p>Or</p>
+                            <p class="socials">
+                                <button>
+                                    <i class="ri-facebook-line"></i>
+                                    <i class="ri-google-line"></i>
+                                </button>
+                            </p>
+                            <p></p>
+                        </div>
+                    </form>
+
+                </div>
             </div>
         </div>
     </div>
-</div>
+</body>
+</html>
