--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,14 +13,15 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap">
   <link href="https://fonts.cdnfonts.com/css/prata-2">
   <link rel="stylesheet" href="./stylesheets/style.css">
-  <script src="@Url.Content("~/javascripts/scripts.js")"></script>
-    @RenderSection("javascripts",false/*required*/)
+    @RenderSection("script",false/*required*/)
 </head>
 
 <body>
   {{{body}}}
-  @RenderBody()
-  <script src="./javascripts/script.js"></script>
+  @RenderBody(){
+    <script src="./javascripts/script.js"></script>
+  }
+  
 </body>
 
 </html>
