--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -1,8 +1,8 @@
-@model MyNamespace.ViewModels.WhateverViewModel
-@section Scripts
-{
-  <script src="@Url.Content("~/javascripts/script.js")"></script>
-}
+@extends('layout')
+
+@section('script')
+    <script src="/javascripts/script.js"></script>
+@endsection
 
 <div id="page" class="page-home">
     <header>
