--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -118,6 +118,10 @@ h4 {
   font-size: 1em;
 }
 
+h2.title {
+  font-size: 30px;
+}
+
 /* ----------------------------- *
  
             #REUSE STYLE
