--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -1686,4 +1686,4 @@
             </div>
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script src=".javascripts/script.js"></script>
