--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -1,527 +1,442 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Work+Sans:wght@300;400;500;600;700&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
 
+
+/* start: Global */
 :root {
-    --primary-color: #0E4BF1;
-    --panel-color: #FFF;
-    --text-color: #000;
-    --black-light-color: #707070;
-    --border-color: #e6e5e5;
-    --toggle-color: #DDD;
-    --box1-color: #4DA3FF;
-    --box2-color: #FFE6AC;
-    --box3-color: #E7D1FC;
-    --title-icon-color: #fff;
-
-    /* ====== Transition ====== */
-    --tran-05: all 0.5s ease;
-    --tran-03: all 0.3s ease;
-    --tran-03: all 0.2s ease;
+    --bs-blue: #0d6efd;
+    --bs-indigo: #6610f2;
+    --bs-purple: #6f42c1;
+    --bs-pink: #d63384;
+    --bs-red: #dc3545;
+    --bs-orange: #fd7e14;
+    --bs-yellow: #ffc107;
+    --bs-green: #198754;
+    --bs-teal: #20c997;
+    --bs-cyan: #0dcaf0;
+    --bs-black: #000;
+    --bs-white: #fff;
+    --bs-gray: #6c757d;
+    --bs-gray-dark: #343a40;
+    --bs-gray-100: #f8f9fa;
+    --bs-gray-200: #e9ecef;
+    --bs-gray-300: #dee2e6;
+    --bs-gray-400: #ced4da;
+    --bs-gray-500: #adb5bd;
+    --bs-gray-600: #6c757d;
+    --bs-gray-700: #495057;
+    --bs-gray-800: #343a40;
+    --bs-gray-900: #212529;
+    --bs-primary: #0d6efd;
+    --bs-secondary: #6c757d;
+    --bs-success: #198754;
+    --bs-info: #0dcaf0;
+    --bs-warning: #ffc107;
+    --bs-danger: #dc3545;
+    --bs-light: #f8f9fa;
+    --bs-dark: #212529;
+    --bs-primary-rgb: 13, 110, 253;
+    --bs-secondary-rgb: 108, 117, 125;
+    --bs-success-rgb: 25, 135, 84;
+    --bs-info-rgb: 13, 202, 240;
+    --bs-warning-rgb: 255, 193, 7;
+    --bs-danger-rgb: 220, 53, 69;
+    --bs-light-rgb: 248, 249, 250;
+    --bs-dark-rgb: 33, 37, 41;
+    --bs-white-rgb: 255, 255, 255;
+    --bs-black-rgb: 0, 0, 0;
+    --bs-body-color-rgb: 33, 37, 41;
+    --bs-body-bg-rgb: 255, 255, 255;
+    --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
+    --bs-body-font-family: var(--bs-font-sans-serif);
+    --bs-body-font-size: 1rem;
+    --bs-body-font-weight: 400;
+    --bs-body-line-height: 1.5;
+    --bs-body-color: #212529;
+    --bs-body-bg: #fff;
+    --bs-border-width: 1px;
+    --bs-border-style: solid;
+    --bs-border-color: #dee2e6;
+    --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
+    --bs-border-radius: 0.375rem;
+    --bs-border-radius-sm: 0.25rem;
+    --bs-border-radius-lg: 0.5rem;
+    --bs-border-radius-xl: 1rem;
+    --bs-border-radius-2xl: 2rem;
+    --bs-border-radius-pill: 50rem;
+    --bs-heading-color: ;
+    --bs-link-color: #0d6efd;
+    --bs-link-hover-color: #0a58ca;
+    --bs-code-color: #d63384;
+    --bs-highlight-bg: #fff3cd;
 }
 
 body {
-    min-height: 100vh;
-    background-color: var(--primary-color);
+    font-family: 'Work Sans', sans-serif;
 }
 
-body.dark {
-    --primary-color: #3A3B3C;
-    --panel-color: #242526;
-    --text-color: #CCC;
-    --black-light-color: #CCC;
-    --border-color: #4D4C4C;
-    --toggle-color: #FFF;
-    --box1-color: #3A3B3C;
-    --box2-color: #3A3B3C;
-    --box3-color: #3A3B3C;
-    --title-icon-color: #CCC;
+
+
+.text-indigo:hover,
+.text-indigo {
+    color: var(--bs-indigo);
 }
 
-/* === Custom Scroll Bar CSS === */
-::-webkit-scrollbar {
-    width: 8px;
+.bg-indigo {
+    background-color: var(--bs-indigo);
 }
 
-::-webkit-scrollbar-track {
-    background: #f1f1f1;
+.dropdown-toggle::after {
+    display: none;
 }
 
-::-webkit-scrollbar-thumb {
-    background: var(--primary-color);
-    border-radius: 12px;
-    transition: all 0.3s ease;
+.cursor-pointer {
+    cursor: pointer;
 }
 
-::-webkit-scrollbar-thumb:hover {
-    background: #0b3cc1;
+.fw-semibold {
+    font-weight: 600;
 }
 
-body.dark::-webkit-scrollbar-thumb:hover,
-body.dark .activity-data::-webkit-scrollbar-thumb:hover {
-    background: #3A3B3C;
+.fs-7 {
+    font-size: .875rem;
 }
 
-nav {
+
+.fx-dropdown-menu {
+    min-width: 16rem;
+    padding: 0;
+    overflow: hidden;
+}
+
+/* start: Global */
+
+
+
+/* start: Sidebar */
+.sidebar-overlay {
     position: fixed;
     top: 0;
     left: 0;
-    height: 100%;
-    width: 250px;
-    padding: 10px 14px;
-    background-color: var(--panel-color);
-    border-right: 1px solid var(--border-color);
-    transition: var(--tran-05);
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 490;
+    opacity: 1;
+    visibility: visible;
+    transition: opacity .2s;
 }
 
-nav.close {
-    width: 73px;
+.sidebar.collapsed~.sidebar-overlay {
+    opacity: 0;
+    visibility: hidden;
 }
 
-nav .logo-name {
+.sidebar.collapsed:hover,
+.sidebar {
+    width: 16rem;
+    overflow-y: auto;
+    transition: width .2s, left .2s;
+    left: 0;
+    z-index: 500;
+}
+
+.sidebar.collapsed {
+    left: -16rem;
+}
+
+.sidebar::-webkit-scrollbar {
+    width: .25rem;
+}
+
+.sidebar::-webkit-scrollbar-track {
+    background-color: var(--bs-gray-300);
+}
+
+.sidebar::-webkit-scrollbar-thumb {
+    background-color: var(--bs-gray-500);
+}
+
+.sidebar::-webkit-scrollbar-thumb:hover {
+    background-color: var(--bs-gray-600);
+}
+
+.sidebar-toggle {
+    cursor: pointer;
+    transition: .2s;
+}
+
+.sidebar-toggle:hover {
+    color: var(--bs-indigo);
+}
+
+.sidebar-menu {
+    list-style-type: none;
+}
+
+.sidebar-menu-item {
+    margin-bottom: .25rem;
+}
+
+.sidebar-menu-item a {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    color: var(--bs-dark);
+    padding: .375rem .75rem;
+    border-radius: .375rem;
+    font-size: .875rem;
+    white-space: nowrap;
+}
+
+.sidebar-menu-item>a {
+    overflow: hidden;
+}
+
+.sidebar-menu-item.focused>a,
+.sidebar-menu-item>a:hover {
+    background-color: var(--bs-gray-200);
+}
+
+.sidebar-menu-item.active a {
+    background-color: var(--bs-indigo);
+    color: var(--bs-light);
+    box-shadow: 0 .25rem .25rem rgba(0, 0, 0, 0.175);
+}
+
+.sidebar-menu-item-icon {
+    margin-right: .625rem;
+    font-size: 1.25rem;
+}
+
+.sidebar-menu-item-accordion {
+    transition: transform .2s;
+}
+
+.sidebar-dropdown-menu-item.focused>a .sidebar-menu-item-accordion,
+.sidebar-menu-item.focused>a .sidebar-menu-item-accordion {
+    transform: rotateZ(180deg);
+}
+
+.sidebar.collapsed:hover .sidebar-menu-divider,
+.sidebar-menu-divider {
+    font-size: .75rem;
+    color: var(--bs-gray-600);
+    transition: opacity .2s;
+    opacity: 1;
+    visibility: visible;
+}
+
+.sidebar-dropdown-menu-item a {
+    padding: .375rem 0;
+    padding-right: .75rem;
+}
+
+.sidebar-dropdown-menu-item.focused>a,
+.sidebar-dropdown-menu-item a:hover {
+    color: var(--bs-indigo);
+}
+
+.sidebar-dropdown-menu {
+    padding-left: 2rem;
+}
+
+.sidebar-dropdown-menu .sidebar-dropdown-menu {
+    padding-left: 1rem;
+    list-style-type: circle;
+}
+
+/* end: Sidebar */
+
+
+
+/* start: Main */
+main {
+    padding-left: 0;
+    min-height: 100vh;
+    font-family: 'Poppins', sans-serif;
+}
+
+
+
+/* start: Navbar */
+nav {
     display: flex;
     align-items: center;
 }
 
-nav .logo-image {
-    display: flex;
-    justify-content: center;
-    min-width: 45px;
-}
-
-nav .logo-image img {
-    width: 40px;
+.navbar-profile-image {
+    width: 2.5rem;
+    height: 2.5rem;
     object-fit: cover;
     border-radius: 50%;
 }
 
-nav .logo-name .logo_name {
-    font-size: 22px;
-    font-weight: 600;
-    color: var(--text-color);
-    margin-left: 14px;
-    transition: var(--tran-05);
-}
-
-nav.close .logo_name {
-    opacity: 0;
-    pointer-events: none;
-}
-
-nav .menu-items {
-    margin-top: 40px;
-    height: calc(100% - 90px);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.menu-items li {
-    list-style: none;
-}
-
-.menu-items li a {
-    display: flex;
-    align-items: center;
-    height: 50px;
-    text-decoration: none;
-    position: relative;
-}
-
-.nav-links li a:hover:before {
-    content: "";
-    position: absolute;
-    left: -7px;
-    height: 5px;
-    width: 5px;
-    border-radius: 50%;
-    background-color: var(--primary-color);
-}
-
-body.dark li a:hover:before {
-    background-color: var(--text-color);
-}
-
-.menu-items li a i {
-    font-size: 24px;
-    min-width: 45px;
-    height: 100%;
+.navbar-link {
+    width: 2.5rem;
+    height: 2.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: var(--black-light-color);
+    border-radius: .25rem;
 }
 
-.menu-items li a .link-name {
-    font-size: 18px;
-    font-weight: 400;
-    color: var(--black-light-color);
-    transition: var(--tran-05);
+.navbar-link:hover {
+    background-color: var(--bs-gray-200);
 }
 
-nav.close li a .link-name {
-    opacity: 0;
-    pointer-events: none;
-}
+/* end: Navbar */
 
-.nav-links li a:hover i,
-.nav-links li a:hover .link-name {
-    color: var(--primary-color);
-}
 
-body.dark .nav-links li a:hover i,
-body.dark .nav-links li a:hover .link-name {
-    color: var(--text-color);
-}
 
-.menu-items .logout-mode {
-    padding-top: 10px;
-    border-top: 1px solid var(--border-color);
-}
-
-.menu-items .mode {
-    display: flex;
-    align-items: center;
-    white-space: nowrap;
-}
-
-.menu-items .mode-toggle {
-    position: absolute;
-    right: 14px;
-    height: 50px;
-    min-width: 45px;
+/* start: Suummary */
+.summary-icon {
+    width: 4rem;
+    height: 4rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    cursor: pointer;
-}
-
-.mode-toggle .switch {
-    position: relative;
-    display: inline-block;
-    height: 22px;
-    width: 40px;
-    border-radius: 25px;
-    background-color: var(--toggle-color);
-}
-
-.switch:before {
-    content: "";
-    position: absolute;
-    left: 5px;
-    top: 50%;
-    transform: translateY(-50%);
-    height: 15px;
-    width: 15px;
-    background-color: var(--panel-color);
-    border-radius: 50%;
-    transition: var(--tran-03);
-}
-
-body.dark .switch:before {
-    left: 20px;
-}
-
-.dashboard {
-    position: relative;
-    left: 250px;
-    background-color: var(--panel-color);
-    min-height: 100vh;
-    width: calc(100% - 250px);
-    padding: 10px 14px;
-    transition: var(--tran-05);
-}
-
-nav.close~.dashboard {
-    left: 73px;
-    width: calc(100% - 73px);
-}
-
-.dashboard .top {
-    position: fixed;
-    top: 0;
-    left: 250px;
-    display: flex;
-    width: calc(100% - 250px);
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 14px;
-    background-color: var(--panel-color);
-    transition: var(--tran-05);
-    z-index: 10;
-}
-
-nav.close~.dashboard .top {
-    left: 73px;
-    width: calc(100% - 73px);
-}
-
-.dashboard .top .sidebar-toggle {
-    font-size: 26px;
-    color: var(--text-color);
-    cursor: pointer;
-}
-
-.dashboard .top .search-box {
-    position: relative;
-    height: 45px;
-    max-width: 600px;
-    width: 100%;
-    margin: 0 30px;
-}
-
-.top .search-box input {
-    position: absolute;
-    border: 1px solid var(--border-color);
-    background-color: var(--panel-color);
-    padding: 0 25px 0 50px;
-    border-radius: 5px;
-    height: 100%;
-    width: 100%;
-    color: var(--text-color);
-    font-size: 15px;
-    font-weight: 400;
-    outline: none;
-}
-
-.top .search-box i {
-    position: absolute;
-    left: 15px;
-    font-size: 22px;
-    z-index: 10;
-    top: 50%;
-    transform: translateY(-50%);
-    color: var(--black-light-color);
-}
-
-.top img {
-    width: 40px;
+    color: var(--bs-light);
+    font-size: 1.5rem;
     border-radius: 50%;
 }
 
-.dashboard .dash-content {
-    padding-top: 50px;
+.summary-primary,
+.summary-indigo,
+.summary-success,
+.summary-danger {
+    transition: .2s;
 }
 
-.dash-content .title {
-    display: flex;
-    align-items: center;
-    margin: 60px 0 30px 0;
+.summary-primary:hover,
+.summary-indigo:hover,
+.summary-success:hover,
+.summary-danger:hover {
+    color: var(--bs-light) !important;
 }
 
-.dash-content .title i {
-    position: relative;
-    height: 35px;
-    width: 35px;
-    background-color: var(--primary-color);
-    border-radius: 6px;
-    color: var(--title-icon-color);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 24px;
+.summary-primary:hover .summary-icon,
+.summary-indigo:hover .summary-icon,
+.summary-success:hover .summary-icon,
+.summary-danger:hover .summary-icon {
+    background-color: var(--bs-light) !important;
 }
 
-.dash-content .title .text {
-    font-size: 24px;
-    font-weight: 500;
-    color: var(--text-color);
-    margin-left: 10px;
+.summary-primary:hover .summary-icon {
+    color: var(--bs-primary) !important;
 }
 
-.dash-content .boxes {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
+.summary-indigo:hover .summary-icon {
+    color: var(--bs-indigo) !important;
 }
 
-.dash-content .boxes .box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 12px;
-    width: calc(100% / 3 - 15px);
-    padding: 15px 20px;
-    background-color: var(--box1-color);
-    transition: var(--tran-05);
+.summary-success:hover .summary-icon {
+    color: var(--bs-success) !important;
 }
 
-.boxes .box i {
-    font-size: 35px;
-    color: var(--text-color);
+.summary-danger:hover .summary-icon {
+    color: var(--bs-danger) !important;
 }
 
-.boxes .box .text {
-    white-space: nowrap;
-    font-size: 18px;
-    font-weight: 500;
-    color: var(--text-color);
+.summary-primary:hover {
+    background-color: var(--bs-primary) !important;
 }
 
-.boxes .box .number {
-    font-size: 40px;
-    font-weight: 500;
-    color: var(--text-color);
+.summary-indigo:hover {
+    background-color: var(--bs-indigo) !important;
 }
 
-.boxes .box.box2 {
-    background-color: var(--box2-color);
+.summary-success:hover {
+    background-color: var(--bs-success) !important;
 }
 
-.boxes .box.box3 {
-    background-color: var(--box3-color);
+.summary-danger:hover {
+    background-color: var(--bs-danger) !important;
 }
 
-.dash-content .activity .activity-data {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-}
+/* end: Suummary */
+/* end: Main */
 
-.activity .activity-data {
-    display: flex;
-}
 
-.activity-data .data {
-    display: flex;
-    flex-direction: column;
-    margin: 0 15px;
-}
 
-.activity-data .data-title {
-    font-size: 20px;
-    font-weight: 500;
-    color: var(--text-color);
-}
+/* start: Breakpoints */
+/* X-Small devices (portrait phones, less than 576px) */
+/* No media query for `xs` since this is the default in Bootstrap */
 
-.activity-data .data .data-list {
-    font-size: 18px;
-    font-weight: 400;
-    margin-top: 20px;
-    white-space: nowrap;
-    color: var(--text-color);
-}
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {}
 
-@media (max-width: 1000px) {
-    nav {
-        width: 73px;
-    }
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
 
-    nav.close {
-        width: 250px;
-    }
-
-    nav .logo_name {
+    /* start: Sidebar */
+    .sidebar-overlay {
         opacity: 0;
-        pointer-events: none;
+        visibility: hidden;
     }
 
-    nav.close .logo_name {
+    .sidebar.collapsed {
+        width: 4.75rem;
+        left: 0;
+    }
+
+    .sidebar.collapsed .sidebar-logo {
+        display: none;
+    }
+
+    .sidebar.collapsed:hover .sidebar-logo {
+        display: block;
+    }
+
+    .sidebar.collapsed:hover .sidebar-toggle {
+        margin-left: auto;
+        margin-right: 0;
+    }
+
+    .sidebar.collapsed .sidebar-toggle {
+        margin: 0 auto;
+        transform: rotateZ(180deg);
+    }
+
+    .sidebar.collapsed:hover .sidebar-menu-divider {
+        font-size: .75rem;
+        color: var(--bs-gray-600);
+        transition: opacity .2s;
         opacity: 1;
-        pointer-events: auto;
+        visibility: visible;
     }
 
-    nav li a .link-name {
+    .sidebar.collapsed .sidebar-menu-divider {
         opacity: 0;
-        pointer-events: none;
+        visibility: hidden;
     }
 
-    nav.close li a .link-name {
-        opacity: 1;
-        pointer-events: auto;
+    /* end: Sidebar */
+
+
+
+    /* start: Main */
+    main {
+        transition: padding-left .2s;
+        padding-left: 16rem;
     }
 
-    nav~.dashboard {
-        left: 73px;
-        width: calc(100% - 73px);
+    .sidebar.collapsed~main {
+        padding-left: 4.75rem;
     }
 
-    nav.close~.dashboard {
-        left: 250px;
-        width: calc(100% - 250px);
-    }
-
-    nav~.dashboard .top {
-        left: 73px;
-        width: calc(100% - 73px);
-    }
-
-    nav.close~.dashboard .top {
-        left: 250px;
-        width: calc(100% - 250px);
-    }
-
-    .activity .activity-data {
-        overflow-X: scroll;
-    }
+    /* end: Main */
 }
 
-@media (max-width: 780px) {
-    .dash-content .boxes .box {
-        width: calc(100% / 2 - 15px);
-        margin-top: 15px;
-    }
-}
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {}
 
-@media (max-width: 560px) {
-    .dash-content .boxes .box {
-        width: 100%;
-    }
-}
+/* X-Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {}
 
-@media (max-width: 400px) {
-    nav {
-        width: 0px;
-    }
+/* XX-Large devices (larger desktops, 1400px and up) */
+@media (min-width: 1400px) {}
 
-    nav.close {
-        width: 73px;
-    }
-
-    nav .logo_name {
-        opacity: 0;
-        pointer-events: none;
-    }
-
-    nav.close .logo_name {
-        opacity: 0;
-        pointer-events: none;
-    }
-
-    nav li a .link-name {
-        opacity: 0;
-        pointer-events: none;
-    }
-
-    nav.close li a .link-name {
-        opacity: 0;
-        pointer-events: none;
-    }
-
-    nav~.dashboard {
-        left: 0;
-        width: 100%;
-    }
-
-    nav.close~.dashboard {
-        left: 73px;
-        width: calc(100% - 73px);
-    }
-
-    nav~.dashboard .top {
-        left: 0;
-        width: 100%;
-    }
-
-    nav.close~.dashboard .top {
-        left: 0;
-        width: 100%;
-    }
-}
+/* end: Breakpoints */
