--- a/views/catalog/category.hbs
+++ b/views/catalog/category.hbs
@@ -1,18 +1,25 @@
 <style>
     @import url(/stylesheets/category.css);
 </style>
-<style type="stylesheets">@import url(https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css);</style>
+<style>
+    @import url(https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css);
+</style>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <style type="stylesheets">@import url(https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css);</style>
 <script type="module" src="/javascripts/swiper-bundle.min.js"></script>
 <script type="module" src="/javascripts/script.js"></script>
-<style type="stylesheets">@import url(https://fonts.cdnfonts.com/css/prata-2);</style>
-<style type="stylesheets">
-    @import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap);</style>
-<style type="stylesheets">@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css);
+<style>
+    @import url(https://fonts.cdnfonts.com/css/prata-2);
 </style>
-<style type="stylesheets">
-    @import url(https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css);</style>
+<style>
+    @import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap);
+</style>
+<style>
+    @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css);
+</style>
+<style>
+    @import url(https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css);
+</style>
 
 
 
@@ -186,38 +193,26 @@
                                             {{#each courses}}
                                             <div onclick="loadDetail( '{{this._id}}')" class="item">
                                                 <div class="dot-image">
-                                                    <a 
-                                                        class="product-permalink"></a>
+                                                    <a class="product-permalink"></a>
                                                     <div class="thumbnail">
                                                         <img src="/images/{{this.tutor.avatar}}" alt="">
                                                     </div>
-<<<<<<< HEAD
-                                                     <div class="star"><span>{{ round this.average}}   </span>
-                                                     <div class="star-"></div>
-                                                     </div>
-=======
                                                     <div class="star"><span>{{ round this.average}} </span>
                                                         <div class="star-"></div>
                                                     </div>
->>>>>>> 3b2aa0c8b30f144934f33e72bcdb68e46dfcc463
                                                     <div class="label"><span>-{{percent this.discount
                                                             this.price}}%</span></div>
                                                 </div>
                                                 <div class="dot-info">
 
-<<<<<<< HEAD
-                                                    <h2 class="dot-title"><a href="">{{this.name}}</a>
-                                                        <h2 class="dot-title"><a href="">{{this.tutor.fullname}}</a>
-
-=======
                                                     <h2 class="dot-title"><a href="">Môn học: {{this.name}}</a>
-                                                        <h2 class="dot-title"><a href="">Tên giảng viên:
+                                                        <h2 class="dot-title"><a href="">Giảng Viên:
                                                                 {{this.tutor.fullname}}</a>
->>>>>>> 3b2aa0c8b30f144934f33e72bcdb68e46dfcc463
+
                                                         </h2>
                                                         <div class="product-price">
-                                                            <span class="before"> {{this.price}}</span>
-                                                            <span class="current">{{this.discount}}</span>
+                                                            <span class="before"> {{this.price}}VNĐ</span>
+                                                            <span class="current">{{this.discount}}VNĐ</span>
                                                         </div>
                                                 </div>
                                             </div>
